--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <meta property="og:title" content="Thomas Jackson's Website">
     <meta property="og:description" content="The portfolio of Thomas Jackson, a programmer from Adelaide, South Australia.">
     <meta property="og:url" content="https://thomasjackson.dev/index.html">
-    <meta property="og:image" content="https://thomasjackson.dev/_assets/img/photo.jpg">
+    <meta property="og:image" content="https://thomasjackson.dev/assets/img/photo.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Thomas Jackson's Website">
     <meta name="twitter:description" content="The portfolio of Thomas Jackson, a programmer from Adelaide, South Australia.">
-    <meta name="twitter:image" content="https://thomasjackson.dev/_assets/img/photo.jpg">
+    <meta name="twitter:image" content="https://thomasjackson.dev/assets/img/photo.jpg">
     <meta name="twitter:image:alt" content="A preview image of https://thomasjackson.dev/">
 
-    <script type="application/javascript" src="/_assets/js/main.js"></script>
+    <script type="application/javascript" src="/assets/js/main.js"></script>
 
-    <link id="site_layout_sheet" rel="stylesheet" href="/_assets/css/stylesheet.css">
-    <link id="site_theme_sheet" rel="stylesheet" href="/_assets/css/themes/minimal.css">
+    <link id="site_layout_sheet" rel="stylesheet" href="/assets/css/stylesheet.css">
+    <link id="site_theme_sheet" rel="stylesheet" href="/assets/css/themes/minimal.css">
     <style id="site_page_style" type="text/css">
         #page_image_photo
         {
             z-index: 300;
             width: calc(25vw);
             height: calc(25vw);
-            background-image: url("/_assets/img/photo.jpg");
+            background-image: url("/assets/img/photo.jpg");
         }
     </style>
 </head>
