Updated stylesheets so that the website hopefully has responsive design and works on mobile devices.

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
     <link id="site_layout_sheet" rel="stylesheet" href="/assets/css/stylesheet.css">
     <link id="site_theme_sheet" rel="stylesheet" href="/assets/css/themes/minimal.css">
     <style id="site_page_style" type="text/css">
+        
     </style>
 </head>
 <body>
@@ -33,9 +34,9 @@
             <h1>Thomas Jackson's Website</h1>
         </header>
         <nav>
-            <a href="/">Home</a> |
-            <a href="/portfolio.html">Portfolio</a> |
-            <a href="#"><strong>Contact</strong></a> |
+            <span><a href="/">Home</a> |</span>
+            <span><a href="/portfolio.html">Portfolio</a> |</span>
+            <span><a href="#"><strong>Contact</strong></a> |</span>
         </nav>
         <main>
             <article>
